--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -18,19 +18,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb274920-f3c2-4584-b95e-df25532f5901",
+   "id": "a28d3fdc-4438-45fd-a88b-48ce99525022",
    "metadata": {},
    "source": [
     "### Some of the keytakeaways from this course include: \n",
     "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fa6c83b-b46a-47c3-8a89-33c5cefe15fa",
+   "metadata": {},
+   "source": [
     "__Objectives:__\n",
     "* Tools for Data Science\n",
     "* Data Science Methodology\n",
     "* Python for Data Science\n",
     "* SQL and Databases\n",
-    "* Naturual Language Toolkits\n",
-    "\n",
-    "\n"
+    "* Naturual Language Toolkits"
    ]
   },
   {
